<resources>
    <string name="facebook_app_id">1705159863029321</string>
    <string name="app_name">FPS</string>
    <string name="action_done">Done</string>
    <string name="txt_image_slider">Image Slideshow</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="notify_save_image">Image Saved</string>
    <string name="none">None</string>
    <string name="autofix">Autofix</string>
    <string name="bw">Intensity</string>
    <string name="crossprocess">Cross Process</string>
    <string name="documentary">Documentary</string>
    <string name="duotone">Duo Tone</string>
    <string name="filllight">Fill Light</string>
    <string name="fisheye">Fish Eye</string>
    <string name="flipvert">Flip Vertical</string>
    <string name="fliphor">Flip Horizontal</string>
    <string name="grain">Grain</string>
    <string name="grayscale">Grayscale</string>
    <string name="lomoish">Lomoish</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="rotate">Rotate</string>
    <string name="saturate">Saturate</string>
    <string name="sepia">Sepia</string>
    <string name="sharpen">Sharpen</string>
    <string name="temperature">Temperature</string>
    <string name="vignette">Vignette</string>
    <string name="scale">scale</string>
    <string name="black">black</string>
    <string name="white">white</string>
    <string name="brightness">brightness</string>
    <string name="contrast">contrast</string>
    <string name="first_color">first_color</string>
    <string name="second_color">second_color</string>
    <string name="third_color">third_color</string>
    <string name="vertical">vertical</string>
    <string name="horizontal">horizontal</string>
    <string name="strength">strength</string>
    <string name="angle">angle</string>
    <string name="tint">tint</string>
    <string name="glAttachShader">glAttachShader</string>
    <string name="not_pick_image">You have not picked any image</string>
    <string name="choose_photos_title">Choose Image</string>
    <string name="make_video_title">Your Video</string>
    <string name="action_make_video">Save</string>
    <string name="exporting_video">Exporting Video</string>
    <string name="write_permission_error">You do not have write external permission</string>
    <string name="save_success">Save successful</string>
    <string name="enter_video_name">Enter video name</string>
    <string name="dialog_positive_button_name">OK</string>
    <string name="dialog_negative_button_name">Cancel</string>
    <string name="gl_attach_shader">glAttachShader</string>
    <string name="save_image_title">SAVE IMAGE</string>
    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="save_image_message">Enter name</string>
    <string name="notice_save">Save successful</string>
    <string name="list_field">id,name,email,picture.width(120).height(120)</string>
    <string name="permission_facebook">email,publish_actions</string>
    <string name="title_share_facebook">Select Photo!</string>
    <string name="url">url</string>
    <string name="data">data</string>
    <string name="jpg">.jpg</string>
    <string name="unknown_preset">Unknown preset: </string>
    <string name="demo_preset">DEMO_PRESET</string>
    <string name="load_fail">Image load failed: </string>
    <string name="load_successful">Image load successful: </string>
    <string name="png">.png</string>
    <string name="crop_failed">Image crop failed: </string>
    <string name="testing">Testing</string>
    <string name="notice_permissions">Cancelling, required permissions are not granted</string>
    <string name="select">Select File</string>
    <string name="meadia_type">video/*,image/*</string>
    <string name="merge_guide">Please choose one frame to make beautiful picture</string>
    <string name="end_view_page">The final background frame</string>
    <string name="start_view_page">The first background frame</string>
    <string name="drawer_option_toggle_scale">Image Scale: %1s</string>
    <string name="drawer_option_toggle_shape">Crop Shape: %1s</string>
    <string name="drawer_option_toggle_guidelines">Guidelines: %1s</string>
    <string name="drawer_option_toggle_aspect_ratio">%1s</string>
    <string name="drawer_option_toggle_auto_zoom">Auto zoom: %1s</string>
    <string name="drawer_option_toggle_max_zoom">Max zoom level: %1s</string>
    <string name="drawer_option_toggle_show_overlay">Show Overlay: %1s</string>
    <string-array name="list_option">
        <item>Circular</item>
        <item>Rectangular</item>
        <item>Min/Max limits override</item>
        <item>Customized Overlay</item>
        <item>Guidelines: %1s</item>
        <item>Image Scale: %1s</item>
        <item>Aspect Ratio: %1s</item>
        <item>Auto zoom: %1s</item>
        <item>Max zoom level: %1s</item>
        <item>Set initial crop rectangle</item>
        <item>Reset crop rectangle to initial</item>
        <item>Show Overlay: %1s</item>
    </string-array>
    <string name="main_action_crop">CROP</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="video_exist">This name exist ! Enter other name</string>
    <string name="image_exist">Image name exist! please choose other name </string>
    <string name="save">Save</string>
    <string name="pick_image">Pick Image</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="back_old">Return</string>
    <string name="square">Square</string>
    <string name="circle">Circle</string>
    <string name="magic_image">Magic image</string>
    <string name="camera">Camera</string>
    <string name="merge">Merge images</string>
    <string name="make_video">Make Video</string>
    <string name="get_image_progress">Taking images</string>
    <string name="image_dialog_title">Enter image name</string>
</resources>
