<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/linearLayout1"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ralativeLayout1"
            android:layout_width="@dimen/custom_dialog_width"
            android:layout_height="@dimen/custom_dialog_height">

            <TextView
                android:id="@+id/fg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_10dp"
                android:paddingRight="@dimen/padding_10dp"
                android:text="@string/save_image_message"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/edtSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/fg"
                android:layout_weight="1"
                android:maxLength="30">

                <requestFocus/>
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relay2"
            android:layout_width="@dimen/layout_300"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save"
                android:layout_width="@dimen/button_size"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/save_button"/>

            <Button
                android:id="@+id/cancel"
                android:layout_width="@dimen/button_size"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_size"
                android:text="@string/cancel_button"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>